--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Hemaroshini M</title>
+        <title>Jayathraa V</title>
     </head>
     <body>
         <!--========== HEADER ==========-->
