--- a/index.html
+++ b/index.html
@@ -292,14 +292,14 @@
 
                         <div class="interests__container bd-grid">
                             <div class="interests__content">
-                                <i class='bx bxs-chess interests__icon' ></i>
+                                <i class='bx bx-cricket-ball interests__icon' ></i>
                                 <span class="interests__name">Throwball</span>
                             </div>
                              <div class="interests__content">
                                 <i class='bx bxs-chess interests__icon' ></i>
                                 <span class="interests__name">Athletics</span>
                             </div>
-                            <div class="interests__content">
+                      <div class="interests__content">
                                 <i class='bx bxs-chess interests__icon' ></i>
                                 <span class="interests__name">Volunteering and community involvement</span>
                             </div>
